update to readme file to include <img> tag for image and <a> tag to live demo

--- a/readme.me
+++ b/readme.me
@@ -2,10 +2,10 @@
 
 Created with ReactJS, JS, HTML, and CSS. 
 
-https://github.com/abutler6588/interest_calculator_live/blob/master/InterestCalc.png 
+<img src="https://github.com/abutler6588/interest_calculator_live/blob/master/InterestCalc.png">
 
 #Try It 
 <hr>
-https://abutler6588.github.io/interest_calculator_live/ 
+<a href="https://abutler6588.github.io/interest_calculator_live/">Live Demo</a> 
 
 
