--- a/readme.me
+++ b/readme.me
@@ -2,7 +2,7 @@
 
 Created with ReactJS, JS, HTML, and CSS. 
 
-<img src="https://github.com/abutler6588/interest_calculator_live/blob/master/InterestCalc.png">
+InterestCalc.png
 
 #Try It 
 <hr>
