--- a/readme.me
+++ b/readme.me
@@ -1,10 +1,10 @@
-#Super Duper Interest Calculator
+##Super Duper Interest Calculator
 
 Created with ReactJS, JS, HTML, and CSS. 
 
 InterestCalc.png
 
-#Try It 
+##Try It 
 <hr>
 <a href="https://abutler6588.github.io/interest_calculator_live/">Live Demo</a> 
 
