--- a/readme.me
+++ b/readme.me
@@ -1,10 +1,9 @@
-# YelpCamp
+##Super Duper Interest Calculator
+<hr>
+Created with ReactJS, JS, HTML, and CSS. 
 
-[![Known Vulnerabilities](https://snyk.io/test/github/lucasweng/yelp-camp/badge.svg)](https://snyk.io/test/github/lucasweng/yelp-camp)
-[![NSP Status](https://nodesecurity.io/orgs/webdevprojects/projects/e3247e54-2256-44ff-9c8a-e4e087bd49fa/badge)](https://nodesecurity.io/orgs/webdevprojects/projects/e3247e54-2256-44ff-9c8a-e4e087bd49fa)
+<img src="https://github.com/abutler6588/interest_calculator_live/blob/master/InterestCalc.png">
 
-> A Node.js web application project from the Udemy course - [The Web Developer Bootcamp by Colt Steele](https://www.udemy.com/the-web-developer-bootcamp/)
-
-## Live Demo
-
-To see the app in action, go to [https://yelpcamp--demo.herokuapp.com/](https://yelpcamp--demo.herokuapp.com/)
+##Try It 
+<hr>
+<a href="https://abutler6588.github.io/interest_calculator_live/">Live Demo</a> 
